--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Miel Natural</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -20,16 +20,16 @@
                         <a class="nav-link active" href="index.html" target="_blank">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./paginas/producto.html" target="_blank">Productos</a>
+                        <a class="nav-link" href="paginas/producto.html" target="_blank">Productos</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./paginas/nosotros.html" target="_blank">Nosotros</a>
+                        <a class="nav-link" href="paginas/nosotros.html" target="_blank">Nosotros</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./paginas/galeria.html" target="_blank">Galeria</a>
+                        <a class="nav-link" href="paginas/galeria.html" target="_blank">Galeria</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./paginas/contacto.html" target="_blank">Contacto</a>
+                        <a class="nav-link" href="paginas/contacto.html" target="_blank">Contacto</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
